# deliverable-canvas-mcp

./: .copier-answers.yml  .env.example  .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  DONE.md  Dockerfile  README.md  fastmcp.json  pyproject.toml
.claude/: settings.json
.claude/skills/deliverable-canvas/: SKILL.md
.claude/skills/mcp-scaffold/: SKILL.md
.gemini/: settings.json
.github/: copilot-instructions.md
.github/workflows/: deploy-aca.yml
azure_aca/: README.md  parameters.json  setup-aca.sh  template.json
components/resources/: canvas_resources.py  methodology_resources.py  template_resources.py
components/resources/methodology/: planning-best-practices.md
components/resources/methodology/rendering/: claude.md  codex.md  cowork.md
components/resources/templates/: proposal_v1.json
components/tools/: canvas.py  fs_tools.py
scripts/: render-mcp.py  sync_skill_stubs.py
skills/canvas-deliverable/: SKILL.md
skills/deliverable-canvas/: SKILL.md
skills/deliverable-canvas/references/: protocol.md  sections-schemas.md
src/: auth.py  config.py  fs.py  logging.py  middleware.py  server.py  storage.py  store_singleton.py  template_loader.py
src/renderer/: artifact.html.j2  artifact.py
templates/: proposal_v1.json
tests/: conftest.py  test_auth.py  test_resources.py  test_resume.py  test_server.py  test_storage.py
