[project]
name = "deliverable-canvas-mcp"
version = "0.1.0"
description = "Provider-portable canvas storage for strategic deliverables (proposals, briefs, frameworks)"
readme = "README.md"
requires-python = ">=3.13"
authors = [{ name = "William Masquelier", email = "william.masquelier@stromy.com.au" }]
dependencies = [
    "fastmcp>=3.0.0",
    "pydantic-settings>=2.0.0",
    "jinja2>=3.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0",
    "pyright>=1.1.0",
    "ruff>=0.4.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["-v", "--tb=short", "--import-mode=importlib"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 120
target-version = "py313"
extend-exclude = ["scripts"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC", "PERF", "S"]
ignore = ["S101", "S608"]  # S608: queries built from hard-coded clauses only

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S", "E501"]

[tool.pyright]
venvPath = "."
venv = ".venv"
pythonVersion = "3.13"
typeCheckingMode = "basic"
include = ["src", "components"]
exclude = ["**/__pycache__", ".venv"]
reportMissingTypeStubs = false
